nav changes - z-index issue

--- a/assets/less/components/main.less
+++ b/assets/less/components/main.less
@@ -303,6 +303,7 @@ Section Styling
 			}
 			&:hover {
 				img {
+					-webkit-filter: blur(7px) brightness(40%);
 					filter: blur(7px) brightness(40%);
 				}
 				.about-work {
@@ -319,7 +320,7 @@ Section Styling
 				top: 0;
 				width: 100%;
 				height: 100%;
-				z-index: 1;
+				z-index: 0;
 				transition: all 225ms ease;
 				a {
 					display: none;
